--- a/v0.5/classification_and_detection/Dockerfile.gpu
+++ b/v0.5/classification_and_detection/Dockerfile.gpu
@@ -42,14 +42,20 @@ RUN pip install tensorflow-gpu==1.14 onnxruntime-gpu
 RUN pip install Cython && pip install pycocotools
 
 
-RUN cd /tmp && \
+RUN cd /root && \
     git clone https://github.com/mlperf/inference && \
     cd inference/loadgen && \
     pip install pybind11 && \
     CFLAGS="-std=c++14" python setup.py install && \
-    rm -rf mlperf
+    cd /root && \
+    ls -lt
 
 RUN  echo "/usr/local/cuda/compat" >> /etc/ld.so.conf.d/cuda-10-0.conf && \
     ldconfig
+
+ADD . /root
+
+RUN ls -lt && \
+    ls inference
 
 ENTRYPOINT ["/bin/bash"]
