--- a/v0.5/classification_and_detection/Dockerfile.cpu
+++ b/v0.5/classification_and_detection/Dockerfile.cpu
@@ -39,8 +39,7 @@ RUN cd /root && \
     cd inference/loadgen && \
     pip install pybind11 && \
     CFLAGS="-std=c++14" python setup.py install && \
-    cd /root && \
-    ls -lt
+    cd /root
 
 ADD . /root
 
